--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 1,
       "metadata": {
         "id": "ImMwSrso1Y76"
       },
@@ -44,14 +44,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
         "id": "HTI3Cbrv1Y79",
-        "outputId": "6b4d5ecb-0465-4d21-81d4-1fbd9014601b"
+        "outputId": "0759b9dc-6065-409c-c76d-2bfd28ab836a"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-842e8203-5b88-4e59-8f81-733667a4ec73\">\n",
+              "  <div id=\"df-12cf3abb-f226-457c-9ee0-aff3366728f6\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -163,7 +163,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-842e8203-5b88-4e59-8f81-733667a4ec73')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-12cf3abb-f226-457c-9ee0-aff3366728f6')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -214,12 +214,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-842e8203-5b88-4e59-8f81-733667a4ec73 button.colab-df-convert');\n",
+              "          document.querySelector('#df-12cf3abb-f226-457c-9ee0-aff3366728f6 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-842e8203-5b88-4e59-8f81-733667a4ec73');\n",
+              "          const element = document.querySelector('#df-12cf3abb-f226-457c-9ee0-aff3366728f6');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -242,7 +242,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 2
         }
       ],
       "source": [
@@ -264,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 3,
       "metadata": {
         "id": "KvhtkV6O1Y79"
       },
@@ -283,13 +283,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FJqLNUPE1Y79",
-        "outputId": "f0d1c067-0396-407d-a5b1-e17a260804a1"
+        "outputId": "823b6fe1-3c72-4cb7-88df-1dc056816106"
       },
       "outputs": [
         {
@@ -312,13 +312,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YZDPLe7J1Y79",
-        "outputId": "90f74cc7-e6e7-48aa-9a1a-91cc5096f811"
+        "outputId": "a69d21cd-7a17-49f2-9ed8-12de2a472727"
       },
       "outputs": [
         {
@@ -357,13 +357,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YW7-D7fo1Y7-",
-        "outputId": "28e30580-6987-434c-db87-9fae2283b6fa"
+        "outputId": "dfced259-d6c8-4567-c675-4a56b451bb9b"
       },
       "outputs": [
         {
@@ -392,7 +392,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 7,
       "metadata": {
         "id": "W0iFHhJu1Y7-"
       },
@@ -435,13 +435,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FGWp1K6Z1Y7-",
-        "outputId": "34ac41ee-5483-48c9-edaf-2452702acb54"
+        "outputId": "76dd7e76-74be-44ac-fa91-8c0469393995"
       },
       "outputs": [
         {
@@ -476,7 +476,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 9,
       "metadata": {
         "id": "_ojrhSp01Y7-"
       },
@@ -503,13 +503,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QGVChl3m1Y7-",
-        "outputId": "21bc9bec-789e-40a3-e19d-729e1267c439"
+        "outputId": "f8c8ed1b-6328-400a-eadb-3c6287bd2b29"
       },
       "outputs": [
         {
@@ -520,7 +520,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 10
         }
       ],
       "source": [
@@ -530,13 +530,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "G6Tjdx6B1Y7_",
-        "outputId": "2cee1bab-c041-4b3a-deff-aaf6496b43e2"
+        "outputId": "e2027858-5809-4585-c076-fc1d0849f5a1"
       },
       "outputs": [
         {
@@ -556,13 +556,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "l_AshFpy1Y7_",
-        "outputId": "994bfc9e-2ada-4d30-da96-82b14e21c37d"
+        "outputId": "b1008595-b767-48d5-8c78-eb72f73bcbb4"
       },
       "outputs": [
         {
@@ -636,46 +636,78 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "! pip install imbalanced-learn"
+      ],
       "metadata": {
-        "id": "F2Fohajk1Y7_",
-        "outputId": "e7ab4940-f5f9-43d8-fae5-5bb2d57f8936"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TPqfwLWHUWv9",
+        "outputId": "215d75a5-5306-4fff-ec14-438b142b957c"
       },
+      "execution_count": 13,
       "outputs": [
         {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'imblearn'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m/var/folders/3f/8c_y2wf506376ylmkn2jrcvwds1jbr/T/ipykernel_15517/2969427.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Import the RandomOverSampler module form imbalanced-learn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mimblearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mover_sampling\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRandomOverSampler\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Instantiate the random oversampler model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# # Assign a random_state parameter of 1 to the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'imblearn'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: imbalanced-learn in /usr/local/lib/python3.10/dist-packages (0.10.1)\n",
+            "Requirement already satisfied: numpy>=1.17.3 in /usr/local/lib/python3.10/dist-packages (from imbalanced-learn) (1.22.4)\n",
+            "Requirement already satisfied: scipy>=1.3.2 in /usr/local/lib/python3.10/dist-packages (from imbalanced-learn) (1.10.1)\n",
+            "Requirement already satisfied: scikit-learn>=1.0.2 in /usr/local/lib/python3.10/dist-packages (from imbalanced-learn) (1.2.2)\n",
+            "Requirement already satisfied: joblib>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from imbalanced-learn) (1.2.0)\n",
+            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from imbalanced-learn) (3.1.0)\n"
           ]
         }
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {
+        "id": "F2Fohajk1Y7_"
+      },
+      "outputs": [],
       "source": [
         "# Import the RandomOverSampler module form imbalanced-learn\n",
         "from imblearn.over_sampling import RandomOverSampler\n",
         "\n",
         "# Instantiate the random oversampler model\n",
         "# # Assign a random_state parameter of 1 to the model\n",
-        "# YOUR CODE HERE!\n",
+        "random_oversampler_model = RandomOverSampler(random_state=1)\n",
+        "\n",
         "\n",
         "# Fit the original training data to the random_oversampler model\n",
-        "# YOUR CODE HERE!"
+        "X_train_resampled, y_train_resampled = random_oversampler_model.fit_resample(X_train, y_train)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
-        "id": "0w1kx1Ye1Y8A"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0w1kx1Ye1Y8A",
+        "outputId": "a1938b23-d53f-4416-e8c0-39fb4b7e4635"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4624\n",
+            "2\n"
+          ]
+        }
+      ],
       "source": [
         "# Count the distinct values of the resampled labels data\n",
-        "# YOUR CODE HERE!"
+        "distinct_values_X = np.unique(X_train_resampled, axis=0)\n",
+        "distinct_values_y = np.unique(y_train_resampled)\n",
+        "print(len(distinct_values_X))\n",
+        "print(len(distinct_values_y))"
       ]
     },
     {
@@ -689,7 +721,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "IC32QXhb1Y8A"
       },
@@ -697,13 +729,13 @@
       "source": [
         "# Instantiate the Logistic Regression model\n",
         "# Assign a random_state parameter of 1 to the model\n",
-        "# YOUR CODE HERE!\n",
+        "random_oversampler_model=LogisticRegression(solver='lbfgs', random_state=1)\n",
         "\n",
         "# Fit the model using the resampled training data\n",
-        "# YOUR CODE HERE!\n",
+        "random_oversampler_model.fit(X_train_resampled, y_train_resampled)\n",
         "\n",
         "# Make a prediction using the testing data\n",
-        "# YOUR CODE HERE!"
+        "random_test_pred = random_oversampler_model.predict(X_test)"
       ]
     },
     {
@@ -723,38 +755,88 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
-        "id": "XquV9a8y1Y8A"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XquV9a8y1Y8A",
+        "outputId": "f21e4f5e-045e-43ec-bf82-28f250162dbf"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9959744975744975"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ],
       "source": [
         "# Print the balanced_accuracy score of the model\n",
-        "# YOUR CODE HERE!"
+        "balanced_accuracy_score(y_test, random_test_pred)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
-        "id": "24zakqD61Y8A"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "24zakqD61Y8A",
+        "outputId": "884f706a-a51f-440e-a25b-b0d8f28b2a0f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[18668    91]\n",
+            " [    2   623]]\n"
+          ]
+        }
+      ],
       "source": [
         "# Generate a confusion matrix for the model\n",
-        "# YOUR CODE HERE!"
+        "matrix_random = confusion_matrix (y_test, random_test_pred)\n",
+        "print(matrix_random)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
-        "id": "IONExClK1Y8A"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IONExClK1Y8A",
+        "outputId": "da1366e0-de72-44a0-cfb2-086a70211b17"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       1.00      1.00      1.00     18759\n",
+            "           1       0.87      1.00      0.93       625\n",
+            "\n",
+            "    accuracy                           1.00     19384\n",
+            "   macro avg       0.94      1.00      0.96     19384\n",
+            "weighted avg       1.00      1.00      1.00     19384\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Print the classification report for the model\n",
-        "# YOUR CODE HERE!"
+        "test_report_random = classification_report (y_test, random_test_pred)\n",
+        "print (test_report_random)"
       ]
     },
     {
@@ -774,7 +856,7 @@
       "source": [
         "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
         "\n",
-        "**Answer:** YOUR ANSWER HERE!"
+        "**Answer:** The performance of health loan is still perfect by using RandomOverSampler model, suggesting that it accurately identifies all the healthy loans in the testing data. Meanwhile, the prediction of high-risk loan is improved on all precision, recall and f1 score compared to the original predition. Overall, the RandomOverSampler model improved our accuracy of making predictions\n"
       ]
     }
   ],
